# kehadiran-parser

./: Cargo.toml  README.md  sample.config.yaml
.github/workflows/: deploy.yml  test.yml
src/: lib.rs  main.rs
testfiles/: 2023-05-24.json  2023-05-24.txt  2023-05-25.json  2023-05-25.txt
