[package]
name = "kehadiran-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
config = "0.13.1"
lazy_static = "1.4.0"
pdf-extract = "0.6.5"
regex = "1.8.3"
serde = "1.0.163"
serde_json = "1.0.96"
